fix(Textarea): make element shrink and stay inside boundaries on smaller screen sizes (#3329)

--- a/packages/dnb-eufemia/src/components/textarea/style/dnb-textarea.scss
+++ b/packages/dnb-eufemia/src/components/textarea/style/dnb-textarea.scss
@@ -78,6 +78,9 @@
     position: relative;
     z-index: 2;
 
+    // To prevent textarea element from going outside of boundaries on smaller screens
+    width: 100%;
+
     @include textareaStyleCommon();
 
     @include scrollY(auto);
